# E-Fapiao-OCR

./: .dockerignore  .env.example  .gitignore  AGENT_GUIDE.md  DESIGN.md  Dockerfile  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: release.yml
app/: __init__.py  cli.py  config.py  errors.py  main.py  ocr_model_profiles.py  sdk.py
app/api/: routes.py  schemas.py
app/core/: capabilities.py  detector.py  forwarder.py  normalizer.py  url_security.py
app/extractors/: _shared.py  air_itinerary.py  air_itinerary_ocr.py  digital_general.py  digital_special.py  fallback.py  rail_12306.py  version_adapter.py
app/ocr/: __init__.py  base.py  credentials.py  factory.py
app/ocr/vendors/: __init__.py  cnocr_vendor.py  http_vendor.py  tencent_vendor.py
app/parsers/: base.py  image_parser.py  ofd_parser.py  pdf_parser.py
docs/: API.md
docs/sample/: README.md
scripts/: build_binary.py  calibrate_cnocr_models.py  generate_sanitized_regression_cases.py
tests/: test_capabilities.py  test_cli.py  test_detector.py  test_health.py  test_http_contract.py  test_http_parse.py  test_integration_samples.py  test_normalizer.py  test_ocr_model_profiles.py  test_ocr_vendor.py  test_ofd_air_itinerary.py  test_ofd_invoice.py  test_pdf_qr_fallback.py  test_sanitized_regression_cases.py  test_test_suite_policy.py  test_url_security.py  test_version_adapter.py
tests/fixtures/: sanitized.py  sanitized_regression_cases.json  sanitized_visual.py
