[project]
name = "e-fapiao-ocr"
version = "0.1.0"
description = "轻量级数电发票 PDF 解析 API 服务"
requires-python = ">=3.11"
authors = [{ name = "E-Fapiao-OCR Team" }]
readme = "README.md"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "pdfplumber>=0.10.3",
    "pyzbar>=0.1.9",
    "pillow>=10.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
efapiao = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
